; Copyright © 2022-2025 SkyLabs AI.
;
; This file is CONFIDENTIAL AND PROPRIETARY to BlueRock. All rights reserved.
;
; Use of this file is only permitted subject to a separate written license agreement with BlueRock.

(env
 (br_timing
  (binaries
   (../BRiCk/rocq-tools/bin/coqc_perf.exe as coqc))
  (flags :standard %{read-lines:flags/ocamlc})
  (ocamlopt_flags :standard -O3 -unbox-closures)
  (coq
   (coqdep_flags :standard -w +all)
   (flags (:standard %{read-lines:flags/coqc}))))
 ; Same, but without coqc_perf
 (_
  (flags :standard %{read-lines:flags/ocamlc})
  (ocamlopt_flags :standard -O3 -unbox-closures)
  (coq
   (coqdep_flags :standard -w +all)
   (flags (:standard %{read-lines:flags/coqc})))))
